# VirtualMuseumGuide

./: .dockerignore  .gitignore  Dockerfile  README.md  lang.json  llm_config.json  museum_app.py  pyproject.toml
data/: jono_sobiesio_portretas.json  kirvio_galva.json  kovos_peilio_smaigalys.json  losimo_kauliukas.json  padirbtu_denaru_spaudas.json  predela.json
scripts/: ingest.py  make_square_thumbs.py  query_test.py
src/: __init__.py  utils.py
